--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -18,7 +18,7 @@
     <title>la palette du gout</title>
   </head>
   <body>
-    <div class="container ">
+    <div class="container red-b ">
       <header class="header header-restaurant ">
         <div class="header-restaurant__arrow ">
           <a href="index.html" class="header-restaurant__arrow " >
@@ -43,96 +43,16 @@
               </div>
               <article class="card-menu__entries">
                 <p class="card-menu__text">ENTREES</p>
-                <div class="card-menu__recipe">
-                  <p class="card-menu__recipe-heading">Fricassée d'escargot</p>
-                  <div class="card-menu__recipe-price">
-                    <p class="card-menu__recipe-text">Au piment d'espelette</p>
-                    <span class="card-menu__price">25€</span>
+                <div class="card-menu__recipe recipe red-b">
+                  <div class="recipe__wrapper ">
+                    <p class="card-menu__recipe-heading">Fricassée d'escargot</p>
+                    <div class="card-menu__recipe-price">
+                      <p class="card-menu__recipe-text">Au piment d'espelette</p>
+                      <span class="card-menu__price">25€</span>
+                    </div>
                   </div>
+                  <i class="fas fa-check-circle recipe__selected "></i>
                 </div>
-                <div class="card-menu__recipe">
-                  <p class="card-menu__recipe-heading">
-                    Foie gras de canard mi-cuit
-                  </p>
-                  <div class="card-menu__recipe-price">
-                    <p class="card-menu__recipe-text">
-                      Et ses copeaux de truffe noire
-                    </p>
-                    <span class="card-menu__price">35€</span>
-                  </div>
-                </div>
-                <div class="card-menu__recipe">
-                  <p class="card-menu__recipe-heading">Oeuf au plat</p>
-                  <div class="card-menu__recipe-price">
-                    <p class="card-menu__recipe-text">
-                      Assaisonné à la truffe sur lit de caviar
-                    </p>
-                    <span class="card-menu__price">20€</span>
-                  </div>
-                </div>
-              </article>
-              <article class="card-menu__entries">
-                <p class="card-menu__text">PLATS</p>
-                <div class="card-menu__recipe">
-                  <p class="card-menu__recipe-heading">
-                    Filet de boeuf aux herbes
-                  </p>
-                  <div class="card-menu__recipe-price">
-                    <p class="card-menu__recipe-text">
-                      Accompagné de sa ribambelle de légumes
-                    </p>
-                    <span class="card-menu__price">40€</span>
-                  </div>
-                </div>
-                <div class="card-menu__recipe">
-                  <p class="card-menu__recipe-heading">
-                    Parmentier de queue de boeuf
-                  </p>
-                  <div class="card-menu__recipe-price">
-                    <p class="card-menu__recipe-text">
-                      À la truffe noire sur sa purée de panais
-                    </p>
-                    <span class="card-menu__price">35€</span>
-                  </div>
-                </div>
-                <div class="card-menu__recipe">
-                  <p class="card-menu__recipe-heading">Filet de turbot</p>
-                  <div class="card-menu__recipe-price">
-                    <p class="card-menu__recipe-text">Aux agrumes</p>
-                    <span class="card-menu__price">44€</span>
-                  </div>
-                </div>
-              </article>
-              <article class="card-menu__entries">
-                <p class="card-menu__text">DESSERTS</p>
-                <div class="card-menu__recipe">
-                  <p class="card-menu__recipe-heading">Paris-Brest</p>
-                  <div class="card-menu__recipe-price">
-                    <p class="card-menu__recipe-text">Revisité</p>
-                    <span class="card-menu__price">18€</span>
-                  </div>
-                </div>
-                <div class="card-menu__recipe">
-                  <p class="card-menu__recipe-heading">
-                    Macaron au chocolat d'exception
-                  </p>
-                  <div class="card-menu__recipe-price">
-                    <p class="card-menu__recipe-text">
-                      Et glace à la vanille de Madagascar
-                    </p>
-                    <span class="card-menu__price">22€</span>
-                  </div>
-                </div>
-                <div class="card-menu__recipe">
-                  <p class="card-menu__recipe-heading">Mousse au chocolat</p>
-                  <div class="card-menu__recipe-price">
-                    <p class="card-menu__recipe-text">
-                      Au piment d'Espelette et à la truffe noire
-                    </p>
-                    <span class="card-menu__price">23€</span>
-                  </div>
-                </div>
-              </article>
 
               <button class="add-cart">commander</button>
             </div>
